fixed labels overlap with date-picker

--- a/static/css/night.css
+++ b/static/css/night.css
@@ -4,6 +4,10 @@
     border: 1px solid #e3e3e3;
 }
 
+#ui-datepicker-div {
+    z-index: 99999 !important;
+}
+
 .ui-datepicker-title {
     font-weight: bolder;
     text-align: center;
